<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <Button
            android:id="@+id/btn_sign_in_shutdown"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_shutdown"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_tv_login_or_sign"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_toEndOf="@+id/btn_sign_in_shutdown"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"/>
    </RelativeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_sign_in_phone_no"
            android:hint="@string/sign_in_et_phone_no"
            android:layout_width="360dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:inputType="phone"
            android:autofillHints="@string/sign_in_et_phone_no"/>

        <EditText
            android:id="@+id/et_sign_in_verification_code"
            android:hint="@string/sign_in_et_verification_code"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/et_sign_in_phone_no"
            app:layout_constraintTop_toBottomOf="@id/et_sign_in_phone_no"
            android:autofillHints="@string/sign_in_et_verification_code"
            android:inputType="text" />

        <Button
            android:id="@+id/yzm"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/sign_in_btn_get_verification_code"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/et_sign_in_verification_code"
            app:layout_constraintTop_toBottomOf="@+id/et_sign_in_phone_no" />

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/sign_in_btn_login_or_sign"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yzm"
            android:layout_marginTop="20dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>