<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="64dp">

        <Button
            android:id="@+id/btn_Login_shutdown"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@mipmap/ic_shutdown"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/tv_login_skip"
            android:text="@string/login_tv_skip"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@mipmap/ic_logo"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/tv_login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/iv_login_logo"
        android:text="@string/app_name"
        android:textColor="#000000"
        android:textSize="40sp" />

    <Button
        android:id="@+id/btn_login_login_vx"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:text="@string/login_btn_login_vx"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#00FF88"

        android:layout_below="@+id/tv_login_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/tv_login_login_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_tv_login_phone"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login_login_vx"
        android:layout_marginTop="10dp"/>

</RelativeLayout>


